--- a/index.html
+++ b/index.html
@@ -35,15 +35,15 @@
     <img src="https://github.com/amabiledeglmann/index/blob/main/terra.png" class="planeta" width="500px">
     <img onclick="Tocar1();" id="foguete" src="foguete.gif" width="80px" class="foguete">
     
-    <audio id="audio1" controls autoplay = "">
+    <audio id="audio1"  autoplay = "">
         <source src="contagem_regressiva.mp3" type="audio/mp3">
     </audio>
 
-    <audio id="audio2" controls autoplay = "">
+    <audio id="audio2"  autoplay = "">
         <source src="lancamento_foguete.mp3" type="audio/mp3">
     </audio>
 
-    <audio id="audio3" controls autoplay = "">
+    <audio id="audio3"  autoplay = "">
         <source src="we-have-a-problem.mp3" type="audio/mp3">
     </audio>
      
