--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 </head>
 
 <body>
-    <img src="https://github.com/amabiledeglmann/index/blob/main/terra.png" class="planeta" width="500px">
+    <img src="terra.png" class="planeta" width="500px">
     <img onclick="Tocar1();" id="foguete" src="foguete.gif" width="80px" class="foguete">
     
     <audio id="audio1"  autoplay = "">
